@@ -1,6 +1,5 @@
 Release new version:
 
-    $ export MAVEN_OPTS="--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED"
     $ mvn release:clean release:prepare
     $ mvn release:perform
 
@@ -12,7 +11,6 @@ Undo failed release attempt:
     $ git push origin -f  # force push to remote
     $ git tag -d nanopub-1.43  # tag name needs to be adjusted
     $ git push --delete origin nanopub-1.43  # delete tag remotely too
-
 
 Update Dependencies:
 
